crates/libs/frieze-macros/tests/ui/nested_vec.stderr
error: frieze: nested Vec is not supported.
 --> tests/ui/nested_vec.rs:5:8
  |
5 |     x: Vec<Vec<String>>,
  |        ^^^^^^^^^^^^^^^^
