crates/libs/frieze-macros/tests/ui/nested_vec.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: Vec<Vec<String>>,
}

fn main() {}
